--- a/src/styles.css
+++ b/src/styles.css
@@ -5,13 +5,23 @@
       #ff6542, ffc15e, 3c0919, #7D1128
   */
   body {
-    /* background-color: #153131; */
-    background-color: #041f1e;
+    background-color: black;
+    /* background-color: #041f1e; */
     color: white;
     font-family: sans-serif;
     margin: 0;
     padding: 0;
   }
+
+.main-container {
+  margin: 1rem;
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  /* align-self: center;   */
+}
+
   .site-title {
     font-size: 2rem;
   }
@@ -109,18 +119,18 @@
   
     .square {
     /* color: #ff6542; */
-    background: #ff6542;;;
+    background: white;
     border: 1px solid #999;
     float: left;
     font-size: 24px;
     font-weight: bold;
-    line-height: 34px;
-    height: 34px;
+    line-height: 44px;
+    height: 44px;
     margin-right: -1px;
     margin-top: -1px;
     padding: 0;
     text-align: center;
-    width: 34px;
+    width: 44px;
   }
   .test {
     margin-top: 200px;
@@ -145,8 +155,27 @@
     display: flex;
     flex-direction: row;
   }
+
   
   .game-info {
     margin-left: 20px;
+  }
+
+  .tdl-contain {
+    /* width: 300px; */
+    flex-grow: 1;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    /* align-items: center; */
+    /* align-content: center; */
+  }
+
+  .button-1 {
+    height: 40px;
+    background-color: white;
+    border-radius: 5px;
+    box-sizing: border-box;
+    color: #000000;
   }
   
