--- a/src/styles.css
+++ b/src/styles.css
@@ -202,5 +202,88 @@
   .homepage-text{
     color: white;
   }
+  .contact-icon {
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+  }
+
+  .contact {
+    background-color: clear;
+  }
+
+  .modal {
+    /* position: fixed; */
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    z-index: 1;
+  }
+
+  .overlay-background {
+    background-color: rgba(0, 0, 0, 0.5); 
+    width: 100vw;
+    height: 100vh;
+    position: fixed;
+    top: 0;
+    left: 0;
+    cursor: pointer;
+    z-index: 9;
+  }
+
+  .overlay-container {
+    background-color: #212427;
+    position: fixed;
+    color: #D9B582;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    margin: auto;
+    /* padding: 30px; */
+    z-index: 10;
+    width: fit-content;
+    height: fit-content;
+    /* box-shadow: #7D1128; */
+    border: #F0A955;
+    border-width: 1px;
+    border-radius: 20px;
+
+  }
+  .overlay-content {
+    padding: 30px;
+    font-style: none;
+  }
+
+  .overlay-controls {
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+  }
+
+  .overlay-close{
+    border: none;
+    color: #F0A955;
+    background-color: transparent;
+    font-size: 2rem;
+    cursor: pointer;
+
+  }
+  .overlay-close::after {
+    display: inline-block;
+    content: "\00d7";
+  }
+
+  .contact-button {
+    color: #212427;
+    background-color: #D9B582;
+    height: 60px;
+    width: 100px;
+    border-radius: 15px;
+    font-size: large;
+    font-weight: 500;
+    /* font-style:oblique; */
+  }
 
   
