--- a/src/styles.css
+++ b/src/styles.css
@@ -161,7 +161,7 @@
     margin-left: 20px;
   }
 
-  .tdl-contain {
+  .input-button-contain {
     /* width: 300px; */
     flex-grow: 1;
     display: flex;
@@ -169,6 +169,29 @@
     justify-content: center;
     /* align-items: center; */
     /* align-content: center; */
+  }
+  .search-container {
+    padding-top: 30px;
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
+    overflow: hidden;
+  }
+
+  .results-container {
+    display: flex;
+    justify-content: center;
+    flex-direction: row;
+    gap: 2rem;
+  }
+
+  .result-tile {
+    background-color: #D9B582;
+    border: #000000;
+    border-radius: 20px;
+    height: 30vh;
+    width: 15vw;
+    padding: 10px;
   }
 
   .button-1 {
@@ -204,8 +227,8 @@
   }
   .contact-icon {
     position: fixed;
-    bottom: 20px;
-    right: 20px;
+    bottom: 30px;
+    right: 30px;
   }
 
   .contact {
