Basic Blog implemented, and blog tests added

--- a/src/styles.css
+++ b/src/styles.css
@@ -317,4 +317,17 @@
     /* font-style:oblique; */
   }
 
+
+  .new-blog-contain {
+    display:flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .blog-contain {
+    display:flex;
+    flex-flow: row wrap;
+    justify-content: center;
+  }
+
   
