--- a/src/styles.css
+++ b/src/styles.css
@@ -226,13 +226,56 @@
     height: 90vh;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    /* justify-content: space-around; */
     align-items: center;
+    padding: 20px;
   }
-
+  .homepage-title{
+    top: 15px;
+  }
   .homepage-text{
-    color: white;
+    color: black;
   }
+  .homepage-container h1{
+    
+    font-family: Montserrat;
+    font-size: 40px; 
+    font-style: normal; 
+    font-variant: normal; 
+    font-weight: 700; 
+    line-height: 26.4px; 
+  } 
+  .homepage-container h3 { 
+    font-family: "Roboto"; 
+    font-size: 14px; 
+    font-style: normal; 
+    font-variant: normal; 
+    font-weight: 700; 
+    line-height: 15.4px; } 
+    
+    .homepage-container p { 
+      font-family: "Roboto";
+      font-size: 25px; font-style: normal; 
+      font-variant: normal; font-weight: 400; 
+      line-height: 20px; 
+    } 
+    .homepage-container blockquote { 
+      font-family: "Roboto"; 
+      font-size: 21px; 
+      font-style: normal; 
+      font-variant: normal; 
+      font-weight: 400; 
+      line-height: 30px; 
+    } 
+    .homepage-container pre { 
+      font-family: "Roboto";  
+      font-size: 13px; 
+      font-style: normal; 
+      font-variant: normal; 
+      font-weight: 400; 
+      line-height: 18.5714px; 
+    }
+
   .contact-icon {
     position: fixed;
     bottom: 30px;
@@ -328,6 +371,23 @@
     display:flex;
     flex-flow: row wrap;
     justify-content: center;
+  }
+
+
+  .row {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+  }
+  
+  .column {
+    flex-basis: 100%;
+  }
+  
+  @media screen and (min-width: 800px) {
+    .column {
+      flex: 1;
+    }
   }
 
   
